--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ tabulate==0.9.0
 qdrant-client==1.7.3
 sentence-transformers==2.2.2
 huggingface_hub==0.25.2
+requests==2.31.0
 # Add other dependencies like pinecone-client, or faiss-cpu as needed
