--- a/services/openai_service/Dockerfile
+++ b/services/openai_service/Dockerfile
@@ -1,4 +1,13 @@
-FROM python:3.9-slim
+# Stage 1: NVIDIA runtime image with CUDA libraries preinstalled
+FROM nvidia/cuda:11.8.0-runtime-ubuntu22.04 AS cuda
+
+# Stage 2: slim Python image for the actual service code
+FROM python:3.9-slim AS runtime
+
+# Copy CUDA from the NVIDIA image so we don't re-download it every build
+COPY --from=cuda /usr/local/cuda /usr/local/cuda
+
+ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
 
 WORKDIR /app
 
