feat: enhance Linux deployment readiness with comprehensive setup and validation scripts
- Updated MANIFEST.in to exclude __pycache__ directory correctly.
- Added CODEX_DEPLOYMENT_CHECKLIST.md for deployment steps and verification.
- Created CODEX_DEPLOYMENT_GUIDE.md detailing optimized Linux deployment procedures.
- Developed LINUX_COMPATIBILITY_REPORT.md assessing compatibility of setup files.
- Introduced PYTHON_VERSION_GUIDE.md for managing Python versions on Codex.
- Implemented check_python_versions.sh to detect available Python installations.
- Created codex_deployment_validator.py for validating deployment readiness.
- Enhanced setup_linux.sh for streamlined environment setup.
- Updated setup_windows.bat for improved Windows compatibility.
- Developed test_linux_compat.py to verify Linux compatibility of setup files.
- Created test_setup_linux.sh for testing setup.sh functionality on Linux.
- Implemented test_venv_detection.py to verify virtual environment detection logic.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -20,7 +20,7 @@ include config/*.py
 
 # Exclude compiled Python files and cache directories
 global-exclude *.py[cod]
-global-exclude __pycache__/
+global-exclude __pycache__
 global-exclude *.so
 global-exclude .*.swp
 global-exclude .DS_Store
