--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -79,13 +79,13 @@ services:
       - SERVICE_HOST=openai-service
       - SERVICE_TYPE=assistant
       - USE_CONSUL=true
-      - DOCKER_CONTAINER=true
-      # Database configuration
+      - DOCKER_CONTAINER=true      # Database configuration
       - QDRANT_HOST=qdrant
       - QDRANT_PORT=6333
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=password      - ENABLE_QDRANT=true
+      - NEO4J_PASSWORD=password
+      - ENABLE_QDRANT=true
       - ENABLE_NEO4J=true
       - DB_RETRY_ATTEMPTS=5
       - DB_RETRY_DELAY=5
