--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Python 3.10.6
 camunda-external-task-client-python3==4.5.0
 openai==1.83.0
-neo4j==5.7.0
+neo4j==5.16.0
 requests==2.31.0
 colorama==0.4.6
 flask==3.0.1
 tabulate==0.9.0
 qdrant-client==1.7.3
+# Note: torch CPU versions are installed in Dockerfile before this
 sentence-transformers==2.2.2
 huggingface_hub==0.25.2
-requests==2.31.0
 # Add other dependencies like pinecone-client, or faiss-cpu as needed
