--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,28 +15,30 @@ services:
       test: ["CMD", "consul", "members"]
       interval: 10s
       timeout: 5s
-      retries: 5  # PostgreSQL Database for Camunda
+      retries: 5
+  # PostgreSQL Database for Camunda
   postgres:
     image: postgres:15
     container_name: dadm-postgres
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=camunda
-      - POSTGRES_USER=camunda
-      - POSTGRES_PASSWORD=camunda
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST_AUTH_METHOD=trust
-      - POSTGRES_INITDB_ARGS=--auth-host=md5 --auth-local=trust
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d    
     networks:
       - dadm-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U camunda"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
+
   # Camunda BPM Platform
   camunda:
     build:
@@ -47,10 +49,16 @@ services:
       - "8080:8080"
     environment:
       - DB_DRIVER=org.postgresql.Driver
-      - DB_URL=jdbc:postgresql://postgres:5432/camunda
-      - DB_USERNAME=camunda
-      - DB_PASSWORD=camunda
-      - WAIT_FOR=postgres:5432
+      - DB_URL=jdbc:postgresql://dadm-postgres:5432/camunda_db
+      - DB_USERNAME=dadm_user
+      - DB_PASSWORD=dadm_password
+      - WAIT_FOR=dadm-postgres:5432
+      # PostgreSQL environment for migration scripts
+      - PGPASSWORD=dadm_password
+      - PGHOST=dadm-postgres
+      - PGPORT=5432
+      - PGUSER=dadm_user
+      - PGDATABASE=camunda_db
     networks:
       - dadm-network
     depends_on:
@@ -79,10 +87,11 @@ services:
       - SERVICE_HOST=openai-service
       - SERVICE_TYPE=assistant
       - USE_CONSUL=true
-      - DOCKER_CONTAINER=true      # Database configuration
-      - QDRANT_HOST=qdrant
+      - DOCKER_CONTAINER=true
+      # Database configuration
+      - QDRANT_HOST=dadm-qdrant
       - QDRANT_PORT=6333
-      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_URI=bolt://dadm-neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=password
       - ENABLE_QDRANT=true
@@ -155,7 +164,7 @@ services:
     volumes:
       - ../config:/app/config
       - ../logs:/app/logs
-      - /var/run/docker.sock:/var/run/docker.sock    
+      - /var/run/docker.sock:/var/run/docker.sock
     # Allow Docker commands
     restart: unless-stopped
     networks:
