Implement thread persistence for OpenAI Assistant integration
- Added thread persistence functionality to maintain conversation continuity across tasks within the same Camunda process instance.
- Updated documentation to include details on thread persistence implementation and benefits.
- Enhanced OpenAI service to support process-level thread management, ensuring context preservation across multiple tasks.
- Modified Service Orchestrator to pass `process_instance_id` for thread management.
- Implemented comprehensive tests to verify thread persistence and context preservation.
- Improved logging for better debugging and monitoring of thread operations.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -93,14 +93,15 @@ services:
       - QDRANT_PORT=6333
       - NEO4J_URI=bolt://dadm-neo4j:7687
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=password
-      - ENABLE_QDRANT=true
+      - NEO4J_PASSWORD=password      - ENABLE_QDRANT=true
       - ENABLE_NEO4J=true
       - DB_RETRY_ATTEMPTS=5
       - DB_RETRY_DELAY=5
     volumes:
       - ../config:/app/config
       - ../services/openai_service/data:/app/services/openai_service/data
+      - ../services:/app/services
+      - ../src:/app/src
     restart: unless-stopped
     networks:
       - dadm-network
