--- a/docker/docker-compose-mcp-standalone.yml
+++ b/docker/docker-compose-mcp-standalone.yml
@@ -24,6 +24,7 @@ services:  # MCP Statistical Analysis Service
       - ../src:/app/src
     networks:
       - mcp-network
+      - dadm-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5201/health"]
       interval: 10s
@@ -31,22 +32,21 @@ services:  # MCP Statistical Analysis Service
       retries: 3
       start_period: 30s
     restart: unless-stopped 
-  
-  # MCP Neo4j Graph Analytics Service (standalone mode)
+    # MCP Neo4j Graph Analytics Service (standalone mode)
   mcp-neo4j-service:
     build:
       context: ..
       dockerfile: services/mcp_neo4j_service/Dockerfile
-    container_name: dadm-mcp-neo4j
+    container_name: dadm-mcp-neo4j    
     ports:
-      - "5202:5202"
+      - "5202:5202"    
     environment:
       - SERVICE_PORT=5202
       - USE_CONSUL=false
-      - NEO4J_URI=neo4j://localhost:7687
+      - NEO4J_URI=bolt://dadm-neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=password
-      - MCP_SERVER_PATH=/app/mcp_servers    
+      - MCP_SERVER_PATH=/app/mcp_servers
     volumes:
       - mcp_neo4j_data:/app/data      
       # Bind mount source code for live development
@@ -55,6 +55,7 @@ services:  # MCP Statistical Analysis Service
       - ../src:/app/src
     networks:
       - mcp-network
+      - dadm-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5202/health"]
       interval: 10s
@@ -89,6 +90,7 @@ services:  # MCP Statistical Analysis Service
       - ../src:/app/src
     networks:
       - mcp-network
+      - dadm-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5203/health"]
       interval: 10s
@@ -107,6 +109,8 @@ services:  # MCP Statistical Analysis Service
 
 networks:
   mcp-network:
+    driver: bridge
+  dadm-network:
     driver: bridge
 
 volumes:
