--- a/services/openai_service/requirements.txt
+++ b/services/openai_service/requirements.txt
@@ -9,7 +9,12 @@ tabulate==0.9.0
 
 # Data Persistence Dependencies
 qdrant-client==1.7.3
-# Note: torch CPU versions are installed in Dockerfile before this
+# Install PyTorch CPU-only first to avoid GPU package downloads
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+torchaudio==2.1.0+cpu
+# Install sentence-transformers after CPU-only torch
 sentence-transformers==2.2.2
 neo4j==5.16.0
 huggingface_hub==0.25.2
