--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -117,6 +117,61 @@ services:
       retries: 3
       start_period: 30s
 
+  # Ollama Server
+  ollama-server:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.ollama
+    container_name: ollama-server
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    networks:
+      - dadm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
+  # Ollama Assistant Service
+  ollama-service:
+    build:
+      context: ..
+      dockerfile: services/ollama_service/Dockerfile
+    container_name: ollama-service
+    ports:
+      - "5300:5300"
+    environment:
+      - PORT=5300
+      - OLLAMA_HOST=http://ollama-server:11434
+      - CONSUL_HTTP_ADDR=consul:8500
+      - SERVICE_HOST=ollama-service
+      - SERVICE_TYPE=assistant
+      - USE_CONSUL=true
+      - DOCKER_CONTAINER=true
+      - QDRANT_HOST=dadm-qdrant
+      - QDRANT_PORT=6333
+    volumes:
+      - ../config:/app/config
+      - ../services/ollama_service/data:/app/services/ollama_service/data
+      - ../src:/app/src
+    restart: unless-stopped
+    networks:
+      - dadm-network
+    depends_on:
+      - ollama-server
+      - consul
+      - qdrant
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5300/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
   # Echo Test Service
   echo-service:
     build:
@@ -242,3 +297,4 @@ volumes:
   neo4j_logs:
   neo4j_import:
   neo4j_plugins:
+  ollama_data:
