--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -175,7 +175,51 @@ services:
     depends_on:
       - consul
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5301/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5300/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
+  # Analysis Service (NEW)
+  analysis-service:
+    build:
+      context: ..
+      dockerfile: services/analysis_service/Dockerfile
+    container_name: analysis-service
+    ports:
+      - "8002:8002"
+    environment:
+      - ANALYSIS_SERVICE_PORT=8002
+      - ANALYSIS_PROMPT_SERVICE_URL=http://prompt-service:5300
+      - ANALYSIS_CAMUNDA_BASE_URL=http://dadm-camunda:8080
+      - ANALYSIS_CONSUL_ENABLED=true
+      - ANALYSIS_CONSUL_URL=http://consul:8500
+      - ANALYSIS_LLM_PROVIDER=openai
+      - ANALYSIS_LLM_MODEL=gpt-4
+      - ANALYSIS_LLM_TEMPERATURE=0.3
+      - ANALYSIS_MAX_TOKENS=4000
+      - ANALYSIS_STRICT_VALIDATION=true
+      - ANALYSIS_CACHE_RESULTS=true
+      - ANALYSIS_WORKFLOW_INTEGRATION=true
+      - SERVICE_HOST=analysis-service
+      - SERVICE_TYPE=analysis
+      - USE_CONSUL=true
+      - CONSUL_HTTP_ADDR=consul:8500
+      - PORT=8002
+      - DOCKER_CONTAINER=true
+    volumes:
+      - ../services/analysis_service:/app/services/analysis_service
+      - ../config:/app/config
+      - ../logs:/app/logs
+    restart: unless-stopped
+    networks:
+      - dadm-network
+    depends_on:
+      - consul
+      - prompt-service
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -209,6 +253,7 @@ services:
       - openai-service
       - echo-service
       - prompt-service
+      - analysis-service
       - consul
     command: sh -c "python scripts/service_monitor.py --interval $${CHECK_INTERVAL:-60} --port 5200"
     healthcheck:
