--- a/services/analysis_service/requirements.txt
+++ b/services/analysis_service/requirements.txt
@@ -9,3 +9,6 @@ requests>=2.31.0
 # Optional: for real LLM integration
 # openai>=1.3.0
 # anthropic>=0.7.0
+
+# Optional: for Consul service discovery
+# python-consul>=1.1.0
