--- a/services/analysis_service/requirements.txt
+++ b/services/analysis_service/requirements.txt
@@ -5,10 +5,11 @@ pydantic>=2.5.0
 python-multipart>=0.0.6
 jsonschema>=4.20.0
 requests>=2.31.0
+aiohttp>=3.8.0
 
 # Optional: for real LLM integration
 # openai>=1.3.0
 # anthropic>=0.7.0
 
 # Optional: for Consul service discovery
-# python-consul>=1.1.0
+python-consul>=1.1.0
