feat: Implement WebSocket support for real-time command execution and output streaming
- Added WebSocket service to handle real-time command output and completion notifications in CLIManager component.
- Updated CLIManager to utilize WebSocket for command execution feedback.
- Created a new API server (cli-api-server-fixed.js) to handle CLI command execution and WebSocket connections.
- Implemented command execution with streaming output and error handling in the API server.
- Added health check and command listing endpoints to the API server.
- Updated package.json files to include necessary dependencies for WebSocket and express server.

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,30 +4,33 @@
     "description": "React UI for DADM - Decision Analysis and Decision Management System",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.0",
+        "@mui/material": "^5.14.0",
+        "@mui/x-data-grid": "^6.10.0",
+        "@mui/x-date-pickers": "^6.10.0",
         "@types/node": "^18.0.0",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
+        "@types/react-syntax-highlighter": "^15.5.7",
+        "axios": "^1.4.0",
+        "cors": "^2.8.5",
+        "date-fns": "^2.30.0",
+        "express": "^5.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4",
-        "@emotion/react": "^11.11.0",
-        "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.14.0",
-        "@mui/icons-material": "^5.14.0",
-        "@mui/x-data-grid": "^6.10.0",
-        "@mui/x-date-pickers": "^6.10.0",
-        "axios": "^1.4.0",
-        "react-router-dom": "^6.14.0",
         "react-markdown": "^8.0.7",
+        "react-resizable-panels": "^0.0.55",
+        "react-router-dom": "^6.14.0",
+        "react-scripts": "5.0.1",
         "react-syntax-highlighter": "^15.5.0",
-        "socket.io-client": "^4.7.0",
         "recharts": "^2.7.0",
-        "date-fns": "^2.30.0",
-        "@types/react-syntax-highlighter": "^15.5.7",
         "remark-gfm": "^3.0.1",
-        "react-resizable-panels": "^0.0.55"
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.7.0",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "BROWSER=none react-scripts start",
