--- a/ui/.env.development
+++ b/ui/.env.development
@@ -2,7 +2,7 @@
 
 # API Configuration
 REACT_APP_API_BASE_URL=http://localhost:8000
-REACT_APP_WS_URL=ws://localhost:8001
+REACT_APP_WS_URL=http://localhost:8000
 
 # Feature Flags
 REACT_APP_ENABLE_REAL_TIME=true
