--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
         "remark-gfm": "^3.0.1",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.7.0",
+        "sqlite3": "^5.1.7",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
