feat: enhance AnalysisDataViewer with process version and enrich analyses with process definitions from Camunda

--- a/data/analysis_storage/analysis_daemon.config
+++ b/data/analysis_storage/analysis_daemon.config
@@ -5,5 +5,5 @@
   "no_graph_db": false,
   "storage_dir": null,
   "log_file": null,
-  "started_at": 1750248362.3900104
+  "started_at": 1750255103.319079
 }
