--- a/ui/package.json
+++ b/ui/package.json
@@ -66,7 +66,7 @@
         ]
     },
     "devDependencies": {
-        "@types/jest": "^27.5.2"
-    },
-    "proxy": "http://localhost:8000"
+        "@types/jest": "^27.5.2",
+        "http-proxy-middleware": "^2.0.9"
+    }
 }
