--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
         "@types/react-dom": "^18.2.0",
         "@types/react-syntax-highlighter": "^15.5.7",
         "axios": "^1.4.0",
+        "bpmn-js": "^18.6.2",
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
         "express": "^5.1.0",
