--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
         "express": "^5.1.0",
+        "mermaid": "^11.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^8.0.7",
