--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
         "date-fns": "^2.30.0",
         "express": "^5.1.0",
         "mermaid": "^11.6.0",
+        "node-fetch": "^2.7.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^8.0.7",
