feat: Enhance BPMN AI Service and UI with new dependencies, improved service integration, and session management
- Updated requirements for AI/ML libraries and added support for enhanced BPMN AI service.
- Introduced a new Docker service for BPMN AI with health checks and environment configurations.
- Refactored API routes to utilize the enhanced BPMN AI service, improving generation and modification capabilities.
- Implemented session storage for BPMN models in the UI to persist user data across sessions.
- Adjusted Docker configurations for better networking and service communication.

--- a/ui/Dockerfile.dev
+++ b/ui/Dockerfile.dev
@@ -18,6 +18,7 @@ EXPOSE 3000
 
 # Set environment variables
 ENV BROWSER=none
+ENV DOCKER=true
 ENV REACT_APP_API_BASE_URL=http://localhost:8000
 ENV REACT_APP_WS_URL=ws://localhost:8001
 
