--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -231,6 +231,49 @@ services:
       retries: 5
       start_period: 30s
 
+  # BPMN AI Service
+  bpmn-ai-service:
+    build:
+      context: ..
+      dockerfile: scripts/Dockerfile.bpmn-ai
+    container_name: dadm-bpmn-ai-service
+    ports:
+      - "5011:5010"
+    environment:
+      - PORT=5010
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - CONSUL_HTTP_ADDR=consul:8500
+      - SERVICE_HOST=bpmn-ai-service
+      - SERVICE_TYPE=bpmn-ai
+      - USE_CONSUL=true
+      - DOCKER_CONTAINER=true
+      # Database configuration
+      - QDRANT_HOST=dadm-qdrant
+      - QDRANT_PORT=6333
+      - NEO4J_URI=bolt://dadm-neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=password
+      - ENABLE_QDRANT=true
+      - ENABLE_NEO4J=true
+    volumes:
+      - ../config:/app/config
+      - ../src:/app/src
+      - ../scripts:/app/scripts
+      - ../logs:/app/logs
+    restart: unless-stopped
+    networks:
+      - dadm-network
+    depends_on:
+      - consul
+      - qdrant
+      - neo4j
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:5010/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
 networks:
   dadm-network:
     driver: bridge
