--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,18 @@ requests==2.31.0
 colorama==0.4.6
 flask==3.0.1
 tabulate==0.9.0
-qdrant-client==1.7.3
-# Note: torch CPU versions are installed in Dockerfile before this
-sentence-transformers==2.2.2
-huggingface_hub==0.25.2
+qdrant-client==1.14.3
+
+# AI/ML dependencies
+sentence-transformers==4.1.0
+transformers==4.52.4
+numpy==2.1.0
+scikit-learn==1.7.0
+scipy==1.14.1
+huggingface_hub==0.30.0
+
+# Additional dependencies for enhanced BPMN AI service
+pyyaml==6.0.1
+
 # Add other dependencies like pinecone-client, or faiss-cpu as needed
+flask_cors
