--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
         "express": "^5.1.0",
+        "lucide-react": "^0.523.0",
         "mermaid": "^11.6.0",
         "node-fetch": "^2.7.0",
         "react": "^18.2.0",
