--- a/services/prompt-service/package.json
+++ b/services/prompt-service/package.json
@@ -12,29 +12,29 @@
         "lint:fix": "eslint src/**/*.ts --fix"
     },
     "dependencies": {
-        "express": "^4.18.2",
+        "axios": "^1.10.0",
         "cors": "^2.8.5",
-        "helmet": "^7.1.0",
-        "morgan": "^1.10.0",
-        "uuid": "^9.0.1",
-        "joi": "^17.11.0",
-        "axios": "^1.6.0",
-        "sqlite3": "^5.1.6",
-        "sqlite": "^5.0.1",
-        "winston": "^3.11.0",
         "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "helmet": "^7.1.0",
+        "joi": "^17.11.0",
+        "morgan": "^1.10.0",
+        "sqlite": "^5.0.1",
+        "sqlite3": "^5.1.6",
+        "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0",
-        "swagger-jsdoc": "^6.2.8"
+        "uuid": "^9.0.1",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
-        "@types/express": "^4.17.21",
         "@types/cors": "^2.8.17",
-        "@types/morgan": "^1.9.9",
-        "@types/uuid": "^9.0.7",
-        "@types/node": "^20.8.0",
+        "@types/express": "^4.17.21",
         "@types/jest": "^29.5.8",
-        "@types/swagger-ui-express": "^4.1.6",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^20.8.0",
         "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
+        "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.9.0",
         "@typescript-eslint/parser": "^6.9.0",
         "eslint": "^8.52.0",
